wip: generate experience forms

--- a/experience-info.html
+++ b/experience-info.html
@@ -9,6 +9,8 @@
     <script src="./assets/scripts/validations.js" defer></script>
     <script src="./assets/scripts/generateExperienceForm-1.js" defer></script>
     <script src="./assets/scripts/generateExperienceForm-2.js" defer></script>
+    <script src="./assets/scripts/generateExperienceForm-3.js" defer></script>
+    <script src="./assets/scripts/generateExperienceForm-4.js" defer></script>
     <script src="./assets/scripts/experience-info.js" defer></script>
     <title>Experience Info</title>
 </head>
@@ -183,57 +185,107 @@
 
 
         <!-- FORM-3-START -->
-        <!-- <div id="experience_form_3">
-                    <div class="position-employer-wrapper">
-                        <div class="position-container">
-                            <div class="position input-control">
-                                <label id="positionLabel_[[[[[[[[[[INDEX]]]]]]]]]]">თანამდებობა</label>
-                                <input type="text" id="positionInput_[[[[[[[[[[INDEX]]]]]]]]]]" class="positionInput"
-                                    placeholder="დეველოპერი, დიზაინერი, ა.შ">
-                                <div class="error">მინიმუმ 2 სიმბოლო</div>
-                            </div>
-                            <img id="positionErrorImg_[[[[[[[[[[INDEX]]]]]]]]]]">
-                        </div>
-                        <div class="employer-container">
-                            <div class="employer input-control">
-                                <label id="employerLabel_[[[[[[[[[[INDEX]]]]]]]]]]">დამსაქმებელი</label>
-                                <input type="text" id="employerInput_[[[[[[[[[[INDEX]]]]]]]]]]" class="employerInput"
-                                    placeholder="დამსაქმებელი">
-                                <div class="error">მინიმუმ 2 სიმბოლო</div>
-                            </div>
-                            <img id="employerErrorImg_[[[[[[[[[[INDEX]]]]]]]]]]">
-                        </div>
+        <div id="experience_form_3">
+            <div class="position-employer-wrapper">
+                <div class="position-container">
+                    <div class="position input-control">
+                        <label id="positionLabel_3">თანამდებობა</label>
+                        <input type="text" id="positionInput_3" class="positionInput"
+                            placeholder="დეველოპერი, დიზაინერი, ა.შ">
+                        <div class="error">მინიმუმ 2 სიმბოლო</div>
                     </div>
-                    <div class="dates-wrapper">
-                        <div class="startDate input-control">
-                            <label id="startDateLabel_[[[[[[[[[[INDEX]]]]]]]]]]">დაწყების რიცხვი</label>
-                            <input type="date" id="startDateInput_[[[[[[[[[[INDEX]]]]]]]]]]"
-                                class="startDateInput dateInputLogo">
-                            <div class="error"></div>
-                        </div>
-                        <img id="startDateErrorImg_[[[[[[[[[[INDEX]]]]]]]]]]">
-                        <div class="endDate input-control">
-                            <label id="endDateLabel_[[[[[[[[[[INDEX]]]]]]]]]]">დამთავრების რიცხვი</label>
-                            <input type="date" id="endDateInput_[[[[[[[[[[INDEX]]]]]]]]]]" class="endDateInput dateInputLogo">
-                            <div class="error"></div>
-                        </div>
-                        <img id="endDateErrorImg_[[[[[[[[[[INDEX]]]]]]]]]]">
+                    <img id="positionErrorImg_3">
+                </div>
+                <div class="employer-container">
+                    <div class="employer input-control">
+                        <label id="employerLabel_3">დამსაქმებელი</label>
+                        <input type="text" id="employerInput_3" class="employerInput" placeholder="დამსაქმებელი">
+                        <div class="error">მინიმუმ 2 სიმბოლო</div>
                     </div>
-                    <div class="description-wrapper">
-                        <div class="description input-control">
-                            <label id="descriptionLabel_[[[[[[[[[[INDEX]]]]]]]]]]">აღწერა</label>
-                            <textarea type="text" id="descriptionInput_[[[[[[[[[[INDEX]]]]]]]]]]" class="descriptionInput"
-                                placeholder="როლი თანამდებობაზე და ზოგადი აღწერა"></textarea>
-                            <div class="error"></div>
-                        </div>
-                        <img id="descriptionErrorImg_[[[[[[[[[[INDEX]]]]]]]]]]">
-                    </div>
-                    <div class="line-wrapper">
-                        <div class="line"></div>
-                    </div>
-                </div> -->
+                    <img id="employerErrorImg_3">
+                </div>
+            </div>
+            <div class="dates-wrapper">
+                <div class="startDate input-control">
+                    <label id="startDateLabel_3">დაწყების რიცხვი</label>
+                    <input type="date" id="startDateInput_3" class="startDateInput dateInputLogo">
+                    <div class="error"></div>
+                </div>
+                <img id="startDateErrorImg_3">
+                <div class="endDate input-control">
+                    <label id="endDateLabel_3">დამთავრების რიცხვი</label>
+                    <input type="date" id="endDateInput_3" class="endDateInput dateInputLogo">
+                    <div class="error"></div>
+                </div>
+                <img id="endDateErrorImg_3">
+            </div>
+            <div class="description-wrapper">
+                <div class="description input-control">
+                    <label id="descriptionLabel_3">აღწერა</label>
+                    <textarea type="text" id="descriptionInput_3" class="descriptionInput"
+                        placeholder="როლი თანამდებობაზე და ზოგადი აღწერა"></textarea>
+                    <div class="error"></div>
+                </div>
+                <img id="descriptionErrorImg_3">
+            </div>
+            <div class="line-wrapper">
+                <div class="line"></div>
+            </div>
+        </div>
 
         <!-- FORM-3-END -->
+
+
+        <!-- FORM-4-START -->
+        <div id="experience_form_4">
+            <div class="position-employer-wrapper">
+                <div class="position-container">
+                    <div class="position input-control">
+                        <label id="positionLabel_4">თანამდებობა</label>
+                        <input type="text" id="positionInput_4" class="positionInput"
+                            placeholder="დეველოპერი, დიზაინერი, ა.შ">
+                        <div class="error">მინიმუმ 2 სიმბოლო</div>
+                    </div>
+                    <img id="positionErrorImg_4">
+                </div>
+                <div class="employer-container">
+                    <div class="employer input-control">
+                        <label id="employerLabel_4">დამსაქმებელი</label>
+                        <input type="text" id="employerInput_4" class="employerInput" placeholder="დამსაქმებელი">
+                        <div class="error">მინიმუმ 2 სიმბოლო</div>
+                    </div>
+                    <img id="employerErrorImg_4">
+                </div>
+            </div>
+            <div class="dates-wrapper">
+                <div class="startDate input-control">
+                    <label id="startDateLabel_4">დაწყების რიცხვი</label>
+                    <input type="date" id="startDateInput_4" class="startDateInput dateInputLogo">
+                    <div class="error"></div>
+                </div>
+                <img id="startDateErrorImg_4">
+                <div class="endDate input-control">
+                    <label id="endDateLabel_4">დამთავრების რიცხვი</label>
+                    <input type="date" id="endDateInput_4" class="endDateInput dateInputLogo">
+                    <div class="error"></div>
+                </div>
+                <img id="endDateErrorImg_4">
+            </div>
+            <div class="description-wrapper">
+                <div class="description input-control">
+                    <label id="descriptionLabel_4">აღწერა</label>
+                    <textarea type="text" id="descriptionInput_4" class="descriptionInput"
+                        placeholder="როლი თანამდებობაზე და ზოგადი აღწერა"></textarea>
+                    <div class="error"></div>
+                </div>
+                <img id="descriptionErrorImg_4">
+            </div>
+            <div class="line-wrapper">
+                <div class="line"></div>
+            </div>
+        </div>
+
+        <!-- FORM-4-END -->
         <div class="generateExperienceForm-wrapper">
             <button class="generateNewFormBtn" id="generateNewFormBtn">მეტი გამოცდილების დამატება</button>
         </div>
@@ -344,42 +396,42 @@
 
         <!--FORM-3 DISPLAY START-->
 
-        <!-- <div class="experienceInfoForm" id="experienceInfoForm_3">
-            <h2 class="experienceInfoHeader" id="experienceFormInfoHeader-[[[[[[[[[[INDEX]]]]]]]]]]"></h2>
+        <div class="experienceInfoForm" id="experienceInfoForm_3">
+            <h2 class="experienceInfoHeader" id="experienceFormInfoHeader_3"></h2>
             <div class="positionEmployeeForm">
-                <p id="formPosition-[[[[[[[[[[INDEX]]]]]]]]]]" class="formPosition"></p>
-                <p id="formEmployer-[[[[[[[[[[INDEX]]]]]]]]]]" class="formEmployer"></p>
+                <p id="formPosition_3" class="formPosition"></p>
+                <p id="formEmployer_3" class="formEmployer"></p>
             </div>
             <div class="startEndDateForm">
-                <p id="formStartDate-[[[[[[[[[[INDEX]]]]]]]]]]" class="formStartDate"></p>
-                <p id="dash-[[[[[[[[[[INDEX]]]]]]]]]]" class="dash"></p>
-                <p id="formEndDate-[[[[[[[[[[INDEX]]]]]]]]]]" class="formEndDate"></p>
+                <p id="formStartDate_3" class="formStartDate"></p>
+                <p id="dash_3" class="dash"></p>
+                <p id="formEndDate_3" class="formEndDate"></p>
             </div>
             <div class="formDescription">
-                <p id="formDescription-[[[[[[[[[[INDEX]]]]]]]]]]" class="formDescription"></p>
+                <p id="formDescription_3" class="formDescription"></p>
             </div>
-        </div>  -->
+        </div>
 
 
         <!-- FORM-3 DISPLAY END -->
 
         <!--FORM-4 DISPLAY START-->
 
-        <!-- <div class="experienceInfoForm" id="experienceInfoForm_2">
-            <h2 class="experienceInfoHeader" id="experienceFormInfoHeader-[[[[[[[[[[INDEX]]]]]]]]]]"></h2>
+        <div class="experienceInfoForm" id="experienceInfoForm_4">
+            <h2 class="experienceInfoHeader" id="experienceFormInfoHeader_4"></h2>
             <div class="positionEmployeeForm">
-                <p id="formPosition-[[[[[[[[[[INDEX]]]]]]]]]]" class="formPosition"></p>
-                <p id="formEmployer-[[[[[[[[[[INDEX]]]]]]]]]]" class="formEmployer"></p>
+                <p id="formPosition_4" class="formPosition"></p>
+                <p id="formEmployer_4" class="formEmployer"></p>
             </div>
             <div class="startEndDateForm">
-                <p id="formStartDate-[[[[[[[[[[INDEX]]]]]]]]]]" class="formStartDate"></p>
-                <p id="dash-[[[[[[[[[[INDEX]]]]]]]]]]" class="dash"></p>
-                <p id="formEndDate-[[[[[[[[[[INDEX]]]]]]]]]]" class="formEndDate"></p>
+                <p id="formStartDate_4" class="formStartDate"></p>
+                <p id="dash_4" class="dash"></p>
+                <p id="formEndDate_4" class="formEndDate"></p>
             </div>
             <div class="formDescription">
-                <p id="formDescription-[[[[[[[[[[INDEX]]]]]]]]]]" class="formDescription"></p>
+                <p id="formDescription_4" class="formDescription"></p>
             </div>
-        </div>  -->
+        </div>
 
 
         <!-- FORM-4 DISPLAY END -->
