wip: form generating logic review & design review

--- a/cv-page.html
+++ b/cv-page.html
@@ -47,6 +47,25 @@
                     <div class="infoDisplaySeparator"></div>
                 </div>
             </div>
+            <div id="displayExperiences">
+                <div class="experienceInfoForm" id="experienceInfoFormCV">
+                    <h2 class="experienceInfoHeaderCV" id="experienceFormInfoHeaderCV"></h2>
+                    <!-- experiences go here -->
+                </div>
+            </div>
+            <div class="separator-line-wrapper">
+                <div class="infoDisplaySeparator"></div>
+            </div>
+            <div id="displayEducations">
+                <!-- educations go here -->
+                <div class="educationInfoForm" id="educationInfoFormCV">
+                    <h2 class="educationInfoHeaderCV" id="educationFormInfoHeaderCV"></h2>
+
+                </div>
+            </div>
+            <div class="footer">
+                <img src="./assets/icons/sparkle.svg" alt="sparkle">
+            </div>
         </div>
         <div class="popup-wrapper" id="popup">
             <div class="popup-content">
