--- a/education-info.html
+++ b/education-info.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="./assets/css/education-info.css">
     <script src="./assets/scripts/validations.js" defer></script>
     <script src="./assets/scripts/generateEducationForm-1.js" defer></script>
+    <script src="./assets/scripts/generateEducationForm-2.js" defer></script>
+    <script src="./assets/scripts/generateEducationForm-3.js" defer></script>
+    <script src="./assets/scripts/generateEducationForm-4.js" defer></script>
     <script src="./assets/scripts/education-info.js" defer></script>
     <title>Education Info</title>
 </head>
@@ -107,44 +110,128 @@
         <!-- FORM - 1 END -->
 
         <!-- FORM - 2 - START -->
-        <!-- <div id="education_form_2">
+        <div id="education_form_2">
             <div class="education-wrapper">
-            <div class="education input-control">
-                <label id="educationLabel_[[[[[[index]]]]]]]">სასწავლებელი</label>
-                <input type="text" id="educationInput_[[[[[[index]]]]]]]" class="educationInput" placeholder="სასწავლებელი">
-                <div class="error">მინიმუმ 2 სიმბოლო</div>
+                <div class="education input-control">
+                    <label id="educationLabel_2">სასწავლებელი</label>
+                    <input type="text" id="educationInput_2" class="educationInput" placeholder="სასწავლებელი">
+                    <div class="error">მინიმუმ 2 სიმბოლო</div>
+                </div>
+                <img id="educationErrorImg_2">
             </div>
-            <img id="educationErrorImg_[[[[[[index]]]]]]]">
-        </div>
-        <div class="qualification-endDate-wrapper">
-            <div class="qualification input-control">
-                <label id="qualificationLabel_[[[[[[index]]]]]]]">ხარისხი</label>
-                <select name="qualification" id="qualification_[[[[[[index]]]]]]]" class="qualificationSelect">
-                    <option value="" class="disabledIcon" disabled selected hidden>აირჩიეთ ხარისხი</option>
-                </select>
-                <div class="error"></div>
+            <div class="qualification-endDate-wrapper">
+                <div class="qualification input-control">
+                    <label id="qualificationLabel_2">ხარისხი</label>
+                    <select name="qualification" id="qualification_2" class="qualificationSelect">
+                        <option value="" class="disabledIcon" disabled selected hidden>აირჩიეთ ხარისხი</option>
+                    </select>
+                    <div class="error"></div>
+                </div>
+                <img id="qualificationErrorImg_2">
+                <div class="endDate input-control">
+                    <label id="endDateLabel_2">დამთავრების რიცხვი</label>
+                    <input type="date" id="endDateInput_2" class="endDateInput dateInputLogo">
+                    <div class="error"></div>
+                </div>
+                <img id="endDateErrorImg_2">
             </div>
-            <img id="qualificationErrorImg_[[[[[[index]]]]]]]">
-            <div class="endDate input-control">
-                <label id="endDateLabel_[[[[[[index]]]]]]]">დამთავრების რიცხვი</label>
-                <input type="date" id="endDateInput_[[[[[[index]]]]]]]" class="endDateInput dateInputLogo">
-                <div class="error"></div>
+            <div class="description-wrapper">
+                <div class="description input-control">
+                    <label id="descriptionLabel_2">აღწერა</label>
+                    <input type="text" id="descriptionInput_2" class="descriptionInput" placeholder="განათლების აღწერა">
+                    <div class="error"></div>
+                </div>
+                <img id="descriptionErrorImg_2">
             </div>
-            <img id="endDateErrorImg_[[[[[[index]]]]]]]">
-        </div>
-        <div class="description-wrapper">
-            <div class="description input-control">
-                <label id="descriptionLabel_[[[[[[index]]]]]]]">აღწერა</label>
-                <input type="text" id="descriptionInput_[[[[[[index]]]]]]]" class="descriptionInput" placeholder="განათლების აღწერა">
-                <div class="error"></div>
+            <div class="line-wrapper">
+                <div class="line"></div>
             </div>
-            <img id="descriptionErrorImg_[[[[[[index]]]]]]]">
         </div>
-        <div class="line-wrapper">
-            <div class="line"></div>
-        </div>
-        </div> -->
         <!-- FORM - 2 END -->
+
+        <!-- FORM - 3 - START -->
+        <div id="education_form_3">
+            <div class="education-wrapper">
+                <div class="education input-control">
+                    <label id="educationLabel_3">სასწავლებელი</label>
+                    <input type="text" id="educationInput_3" class="educationInput" placeholder="სასწავლებელი">
+                    <div class="error">მინიმუმ 2 სიმბოლო</div>
+                </div>
+                <img id="educationErrorImg_3">
+            </div>
+            <div class="qualification-endDate-wrapper">
+                <div class="qualification input-control">
+                    <label id="qualificationLabel_3">ხარისხი</label>
+                    <select name="qualification" id="qualification_3" class="qualificationSelect">
+                        <option value="" class="disabledIcon" disabled selected hidden>აირჩიეთ ხარისხი</option>
+                    </select>
+                    <div class="error"></div>
+                </div>
+                <img id="qualificationErrorImg_3">
+                <div class="endDate input-control">
+                    <label id="endDateLabel_3">დამთავრების რიცხვი</label>
+                    <input type="date" id="endDateInput_3" class="endDateInput dateInputLogo">
+                    <div class="error"></div>
+                </div>
+                <img id="endDateErrorImg_3">
+            </div>
+            <div class="description-wrapper">
+                <div class="description input-control">
+                    <label id="descriptionLabel_3">აღწერა</label>
+                    <input type="text" id="descriptionInput_3" class="descriptionInput" placeholder="განათლების აღწერა">
+                    <div class="error"></div>
+                </div>
+                <img id="descriptionErrorImg_3">
+            </div>
+            <div class="line-wrapper">
+                <div class="line"></div>
+            </div>
+        </div>
+        <!-- FORM - 3 END -->
+
+
+        <!-- FORM - 4 - START -->
+        <div id="education_form_4">
+            <div class="education-wrapper">
+                <div class="education input-control">
+                    <label id="educationLabel_4">სასწავლებელი</label>
+                    <input type="text" id="educationInput_4" class="educationInput" placeholder="სასწავლებელი">
+                    <div class="error">მინიმუმ 2 სიმბოლო</div>
+                </div>
+                <img id="educationErrorImg_4">
+            </div>
+            <div class="qualification-endDate-wrapper">
+                <div class="qualification input-control">
+                    <label id="qualificationLabel_4">ხარისხი</label>
+                    <select name="qualification" id="qualification_4" class="qualificationSelect">
+                        <option value="" class="disabledIcon" disabled selected hidden>აირჩიეთ ხარისხი</option>
+                    </select>
+                    <div class="error"></div>
+                </div>
+                <img id="qualificationErrorImg_4">
+                <div class="endDate input-control">
+                    <label id="endDateLabel_4">დამთავრების რიცხვი</label>
+                    <input type="date" id="endDateInput_4" class="endDateInput dateInputLogo">
+                    <div class="error"></div>
+                </div>
+                <img id="endDateErrorImg_4">
+            </div>
+            <div class="description-wrapper">
+                <div class="description input-control">
+                    <label id="descriptionLabel_4">აღწერა</label>
+                    <input type="text" id="descriptionInput_4" class="descriptionInput" placeholder="განათლების აღწერა">
+                    <div class="error"></div>
+                </div>
+                <img id="descriptionErrorImg_4">
+            </div>
+            <div class="line-wrapper">
+                <div class="line"></div>
+            </div>
+        </div>
+        <!-- FORM - 4 END -->
+
+
+
         <div class="generateExperienceForm-wrapper">
             <button class="generateNewFormBtn" id="generateNewFormBtn">მეტი გამოცდილების დამატება</button>
         </div>
@@ -157,7 +244,7 @@
             </div>
         </div>
     </div>
-    <div class="form-info-display">
+    <div class="form-info-display" id="form-info-display">
         <div class="info-picture-wrapper">
             <div class="info-container">
                 <div class="name-surname">
@@ -189,7 +276,7 @@
         </div>
         <div class="experienceInfoForm" id="experienceInfoForm">
             <h2 class="experienceInfoHeader" id="experienceFormInfoHeader"></h2>
-            <div class="positionEmployeeForm">
+            <!-- <div class="positionEmployeeForm">
                 <p id="formPosition" class="formPosition"></p>
                 <p id="formEmployer" class="formEmployer"></p>
             </div>
@@ -200,7 +287,7 @@
             </div>
             <div class="formDescription">
                 <p id="formDescription" class="formDescription"></p>
-            </div>
+            </div> -->
         </div>
         <div class="separator-line-wrapper">
             <div class="infoDisplaySeparator"></div>
@@ -238,20 +325,51 @@
         <!-- education display FORM - 1 END -->
 
         <!-- education display FORM - 2 START -->
-        <!-- <div class="educationInfoForm" id="educationInfoForm_2">
-            <h2 class="educationInfoHeader" id="educationFormInfoHeader_[[[[[[[INDEX]]]]]]]]"></h2>
+        <div class="educationInfoForm" id="educationInfoForm_2">
+            <h2 class="educationInfoHeader" id="educationFormInfoHeader_2"></h2>
             <div class="educationQualificationForm">
-                <p id="formEducation_[[[[[[[INDEX]]]]]]]]" class="formEducation"></p>
-                <p id="formQualification_[[[[[[[INDEX]]]]]]]]" class="formQualification"></p>
+                <p id="formEducation_2" class="formEducation"></p>
+                <p id="formQualification_2" class="formQualification"></p>
             </div>
             <div class="educationEndDate">
-                <p class="formEducationEndDate" id="formEducationEndDate_[[[[[[[INDEX]]]]]]]]"></p>
+                <p class="formEducationEndDate" id="formEducationEndDate_2"></p>
             </div>
             <div class="educationDescription">
-                <p class="formEducationDescription" id="formEducationDescription_[[[[[[[INDEX]]]]]]]]"></p>
+                <p class="formEducationDescription" id="formEducationDescription_2"></p>
             </div>
-        </div> -->
+        </div>
         <!-- education display FORM - 2 END -->
+        <!-- education display FORM - 3 START -->
+        <div class="educationInfoForm" id="educationInfoForm_3">
+            <h2 class="educationInfoHeader" id="educationFormInfoHeader_3"></h2>
+            <div class="educationQualificationForm">
+                <p id="formEducation_3" class="formEducation"></p>
+                <p id="formQualification_3" class="formQualification"></p>
+            </div>
+            <div class="educationEndDate">
+                <p class="formEducationEndDate" id="formEducationEndDate_3"></p>
+            </div>
+            <div class="educationDescription">
+                <p class="formEducationDescription" id="formEducationDescription_3"></p>
+            </div>
+        </div>
+        <!-- education display FORM - 3 END -->
+
+        <!-- education display FORM - 4 START -->
+        <div class="educationInfoForm" id="educationInfoForm_4">
+            <h2 class="educationInfoHeader" id="educationFormInfoHeader_4"></h2>
+            <div class="educationQualificationForm">
+                <p id="formEducation_4" class="formEducation"></p>
+                <p id="formQualification_4" class="formQualification"></p>
+            </div>
+            <div class="educationEndDate">
+                <p class="formEducationEndDate" id="formEducationEndDate_4"></p>
+            </div>
+            <div class="educationDescription">
+                <p class="formEducationDescription" id="formEducationDescription_4"></p>
+            </div>
+        </div>
+        <!-- education display FORM - 4 END -->
         <div class="footer">
             <img src="./assets/icons/sparkle.svg" alt="sparkle">
         </div>
